# ainalytics

./: .pre-commit-config.yaml
ainalytics/: .gitignore  alembic.ini  pyproject.toml
ainalytics/alembic/: env.py
ainalytics/alembic/versions/: a809faa745af_initial_migration.py  c0adef449ac2_initial_migration.py
ainalytics/src/ainalytics/: app.py  config.py  schemas.py  service.py
ainalytics/src/ainalytics/agent/: database.py  flow.py  helpers.py  models.py  prompts.py  router.py  schemas.py  seed.py  service.py
ainalytics/src/ainalytics/auth/: models.py  router.py  schemas.py  service.py
ainalytics/src/ainalytics/charts/: models.py  router.py  schemas.py  service.py
ainalytics/src/ainalytics/database/: __init__.py  database.py  manage.py
webapp/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
webapp/src/: middleware.ts
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/api/analyze/: route.ts
webapp/src/app/api/auth/[...nextauth]/: options.ts  route.ts
webapp/src/app/canvas/: page.tsx
webapp/src/app/dashboard/: page.tsx
webapp/src/components/: auth-provider.tsx  chart-display.tsx  dashboard-canva.tsx  data-analysis-chat.tsx  spinner.tsx
webapp/src/lib/: data.ts
webapp/src/types/: types.ts
