[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ainalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "fastapi-cli>=0.0.7",
    "fastapi[standard]>=0.115.8",
    "google-auth>=2.38.0",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "openai>=1.63.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "faker>=36.1.1",
    "ipykernel>=6.29.5",
]
